--- a/dev.html
+++ b/dev.html
@@ -367,7 +367,7 @@
 
   /* Photo background swatch button */
   .bgSwatch.photo{
-    display:none;
+    display:flex;
     align-items:center;
     justify-content:center;
     font-size:16px;
@@ -652,7 +652,7 @@ const endBtn = document.getElementById("endBtn");
   const SHOW_RADIUS_MAX = 54;
 
   let RECALL_RADIUS   = 22;    // adjustable size for recall
-  const PADDING_BETWEEN = 12;    // non-overlap margin
+  function paddingBetween(){ return Math.max(10, Math.round(0.25 * Math.max(SHOW_RADIUS_MAX, RECALL_RADIUS))); }    // non-overlap margin
 
   const BETWEEN_ROUNDS_MS = 900; // pause after success/fail
 
@@ -677,6 +677,58 @@ const endBtn = document.getElementById("endBtn");
     { name:"amber",   h: 42,  s:95, l:56 },
   ];
 
+
+  // ---------- Color helpers (make each circle color truly random) ----------
+  function hslToRgb(h, s, l){
+    // h:0-360, s/l:0-100
+    s /= 100; l /= 100;
+    const c = (1 - Math.abs(2*l - 1)) * s;
+    const hh = (h % 360) / 60;
+    const x = c * (1 - Math.abs((hh % 2) - 1));
+    let r=0,g=0,b=0;
+    if (0 <= hh && hh < 1){ r=c; g=x; b=0; }
+    else if (1 <= hh && hh < 2){ r=x; g=c; b=0; }
+    else if (2 <= hh && hh < 3){ r=0; g=c; b=x; }
+    else if (3 <= hh && hh < 4){ r=0; g=x; b=c; }
+    else if (4 <= hh && hh < 5){ r=x; g=0; b=c; }
+    else { r=c; g=0; b=x; }
+    const m = l - c/2;
+    r = Math.round((r+m)*255);
+    g = Math.round((g+m)*255);
+    b = Math.round((b+m)*255);
+    return [r,g,b];
+  }
+
+  function clamp255(v){ return Math.max(0, Math.min(255, Math.round(v))); }
+
+  function rgbCss(r,g,b){ return `rgb(${clamp255(r)}, ${clamp255(g)}, ${clamp255(b)})`; }
+
+  // Take a base HSL swatch and "randomize" it by multiplying RGB channels by random factors.
+  function randomizedColorFromSwatch(swatch){
+    const [br,bg,bb] = hslToRgb(swatch.h, swatch.s, swatch.l);
+
+    const fr = 0.75 + Math.random()*0.45;   // 0.75–1.20
+    const fg = 0.75 + Math.random()*0.45;
+    const fb = 0.75 + Math.random()*0.45;
+
+    let r = br * fr, g = bg * fg, b = bb * fb;
+
+    // Ensure not too dark
+    const minBright = 70;
+    const maxCh = Math.max(r,g,b);
+    if (maxCh < minBright){
+      const scale = minBright / (maxCh || 1);
+      r *= scale; g *= scale; b *= scale;
+    }
+
+    return rgbCss(r,g,b);
+  }
+
+  function pickRandomCircleColorCss(){
+    const sw = COLOR_PALETTE[Math.floor(Math.random()*COLOR_PALETTE.length)];
+    return randomizedColorFromSwatch(sw);
+  }
+
   // ---------- Bold, distinct tones (fixed mapping) ----------
   const NOTE_FREQS = [
     220.00, 261.63, 293.66, 329.63, 392.00, 440.00, 523.25, 659.25,
@@ -686,18 +738,8 @@ const endBtn = document.getElementById("endBtn");
 
   let audioCtx = null;
   function ensureAudio() {
-    if (!audioCtx) {
-      const Ctx = window.AudioContext || window.webkitAudioContext;
-      audioCtx = new Ctx();
-      masterGain = audioCtx.createGain();
-      masterGain.gain.value = 0.18;
-      masterGain.connect(audioCtx.destination);
-    }
-    // iOS/Safari often starts AudioContext in "suspended" until a user gesture.
-    if (audioCtx.state === "suspended") {
-      // best-effort; safe to call multiple times
-      audioCtx.resume().catch(()=>{});
-    }
+    audioCtx ??= new (window.AudioContext || window.webkitAudioContext)();
+    if (audioCtx.state === "suspended") audioCtx.resume();
     return audioCtx;
   }
 
@@ -728,14 +770,6 @@ const endBtn = document.getElementById("endBtn");
   const rand  = (a,b) => Math.random()*(b-a)+a;
   const clamp = (v,lo,hi) => Math.max(lo, Math.min(hi, v));
   const dist  = (a,b) => Math.hypot(a.cx-b.cx, a.cy-b.cy);
-
-  const shuffle = (arr) => {
-    for (let i = arr.length - 1; i > 0; i--) {
-      const j = Math.floor(Math.random() * (i + 1));
-      [arr[i], arr[j]] = [arr[j], arr[i]];
-    }
-    return arr;
-  };
 
   function setStatus(s){ statusEl.textContent = s; }
   function setLevel(){ levelEl.textContent = `N = ${N}`; }
@@ -993,75 +1027,27 @@ game.classList.add("goldGlow");
 
   function nonOverlappingPlacement(n) {
     const ar = arenaRectInGameCoords();
-    const extraPad = 12; // gives room for glow/blur so circles *look* separated
     const placed = [];
-    const maxTries = 4000;
 
-    for (let i = 0; i < n; i++) {
-      const rShow = Math.max(RECALL_RADIUS, rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX));
-      let cx = rand(ar.left + rShow, ar.right - rShow);
-      let cy = rand(ar.top + rShow, ar.bottom - rShow);
+    for (let i=0; i<n; i++) {
+      let ok = false;
 
-      for (let t = 0; t < maxTries; t++) {
-        cx = rand(ar.left + rShow, ar.right - rShow);
-        cy = rand(ar.top + rShow, ar.bottom - rShow);
+      for (let tries=0; tries<250; tries++) {
+        const rShow = rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX);
+        const cx = rand(ar.left + rShow, ar.left + ar.width  - rShow);
+        const cy = rand(ar.top  + rShow, ar.top  + ar.height - rShow);
+        const candidate = { cx, cy, rShow };
 
-        let ok = true;
-        for (const p of placed) {
-          const minDist = rShow + p.rShow + PADDING_BETWEEN + extraPad;
-          if (dist(cx, cy, p.cx, p.cy) < minDist) { ok = false; break; }
+        const tooClose = placed.some(p => dist(candidate, p) < (candidate.rShow + p.rShow + PADDING_BETWEEN));
+        if (!tooClose) {
+          ok = true;
+          placed.push({ cx, cy, rShow });
+          break;
         }
-        if (ok) break;
-      }
-
-      placed.push({ cx, cy, rShow });
-    }
-
-    // Final pass: nudge apart if anything still overlaps (important for big N / big dots)
-    resolveAllOverlaps(placed, ar, PADDING_BETWEEN + extraPad);
-    return placed;
-  }
-
-  function resolveAllOverlaps(list, ar, pad) {
-    const clamp = (v, lo, hi) => Math.max(lo, Math.min(hi, v));
-    for (let iter = 0; iter < 500; iter++) {
-      let maxOverlap = 0;
-
-      for (let i = 0; i < list.length; i++) {
-        for (let j = i + 1; j < list.length; j++) {
-          const a = list[i], b = list[j];
-          let dx = a.cx - b.cx;
-          let dy = a.cy - b.cy;
-          let d = Math.hypot(dx, dy);
-
-          const minDist = a.rShow + b.rShow + pad;
-          if (d < minDist) {
-            const overlap = (minDist - d);
-            maxOverlap = Math.max(maxOverlap, overlap);
-
-            if (d < 0.0001) { dx = (Math.random() - 0.5); dy = (Math.random() - 0.5); d = Math.hypot(dx, dy) || 1; }
-            const ux = dx / d, uy = dy / d;
-            const move = overlap / 2 + 0.5;
-
-            a.cx += ux * move; a.cy += uy * move;
-            b.cx -= ux * move; b.cy -= uy * move;
-          }
-        }
-      }
-
-      // keep inside bounds
-      for (const p of list) {
-        p.cx = clamp(p.cx, ar.left + p.rShow, ar.right - p.rShow);
-        p.cy = clamp(p.cy, ar.top + p.rShow, ar.bottom - p.rShow);
-      }
-
-      if (maxOverlap < 0.5) break;
-    }
-  }
       }
 
       if (!ok) {
-        const rShow = Math.max(RECALL_RADIUS, rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX));
+        const rShow = rand(SHOW_RADIUS_MIN, SHOW_RADIUS_MAX);
         const cx = rand(ar.left + rShow, ar.left + ar.width  - rShow);
         const cy = rand(ar.top  + rShow, ar.top  + ar.height - rShow);
         placed.push({ cx, cy, rShow });
@@ -1087,19 +1073,11 @@ game.classList.add("goldGlow");
     phase = "showing";
     setStatus(`Watch the sequence… (${N})`);
 
-    // Place circles without overlap and assign randomized colors (sound stays deterministic by index)
-    let colorBag = shuffle([...COLOR_PALETTE]);
-    let colorIdx = 0;
-    const nextColor = () => {
-      if (colorIdx >= colorBag.length) { colorBag = shuffle([...COLOR_PALETTE]); colorIdx = 0; }
-      return colorBag[colorIdx++];
-    };
     circles = nonOverlappingPlacement(N).map((pos, i) => {
-      const color = nextColor();
-
+      const color = COLOR_PALETTE[i % COLOR_PALETTE.length];
       const freq  = NOTE_FREQS[i % NOTE_FREQS.length];
       const wave  = WAVEFORMS[i % WAVEFORMS.length];
-      return { ...pos, index:(i+1), color, freq, wave, el:null };
+      return { ...pos, index:i, color, freq, wave, el:null };
     });
 
     circles.forEach(c => {
@@ -1225,9 +1203,8 @@ game.classList.add("goldGlow");
   }
 
   function attemptClose(){
-  // Mobile browsers generally block window.close(). Instead, just dismiss overlays/panels.
-  overlay.classList.remove("show");
-}
+    try { window.close(); } catch(e) {}
+  }
 
   function endGame(){
     runToken++;
