--- a/dev.html
+++ b/dev.html
@@ -365,8 +365,8 @@
   }
 
 
-  /* Photo background swatch button */
-  .bgSwatch.photo{
+  /* Photo background swatch button (camera) */
+  .bg-swatch.photo{
     display:flex;
     align-items:center;
     justify-content:center;
@@ -374,8 +374,19 @@
     line-height:1;
     border-style:dashed;
     border-width:1px;
+    background: rgba(0,0,0,0.08);
   }
-  .bgSwatch.photo::after{ content:""; }
+  .bg-swatch.photo::after{ content:"📷"; }
+  .photo-wrap{ position:relative; width:26px; height:26px; flex:0 0 auto; }
+  .photo-wrap .bg-swatch{ width:26px; height:26px; }
+  .photo-input{
+    position:absolute;
+    inset:0;
+    width:100%;
+    height:100%;
+    opacity:0;
+    cursor:pointer;
+  }
   .photoBgActive .bg-palette-wrap{ backdrop-filter: blur(2px); }
 
 
@@ -409,19 +420,25 @@
   }
 
 
-  /* Upload icon button */
-  .bgSwatch.upload {
-    display:flex;
-    align-items:center;
-    justify-content:center;
-  }
-  .bgSwatch.upload svg{
-    width:16px; height:16px;
-    fill: currentColor;
-    opacity:0.9;
-  }
-</style>
 
+  .version{font-size:12px;opacity:.75;margin-left:8px;white-space:nowrap;}
+
+  .photo-input{position:absolute;inset:0;width:100%;height:100%;opacity:0;cursor:pointer;}
+
+    .bg-upload{
+      display:inline-flex; align-items:center; justify-content:center;
+      width:44px; height:32px; border-radius:12px;
+      border:1px solid rgba(255,255,255,.18);
+      background:rgba(255,255,255,.06);
+      color:rgba(255,255,255,.92);
+      font-size:18px;
+      user-select:none;
+      -webkit-tap-highlight-color: transparent;
+      cursor:pointer;
+    }
+    .bg-upload:active{ transform: translateY(1px); }
+
+</style>
 </head>
 
 <body>
@@ -435,6 +452,7 @@
 <button id="endBtn" title="End game and show score">End Game</button>
 
     <div id="level">N = 2</div>
+    <div id="versionBadge" class="version">DEV v32</div>
 
     <div class="bg-palette-wrap" aria-label="Background">
       <span class="bg-label">Background</span>
@@ -460,7 +478,7 @@
   </div>
 
   <div style="display:flex; gap:10px; align-items:center;">
-    <div id="status">Press Play once. Then it runs continuously.</div>
+    <div id="status">Press Start once. Then it runs continuously.</div>
     <button id="closeBtn" title="Close">✕</button>
   </div>
 </header>
@@ -470,7 +488,7 @@
     <div id="arena"></div>
     <svg id="linesLayer" aria-hidden="true"></svg>
 
-    <div id="overlay" role="dialog" aria-modal="true">
+    <div id="overlay" role="dialog" aria-modal="true" style="display:none">
       <div id="panel">
         <h2>Final Score</h2>
         <div id="score">N = 2</div>
@@ -652,7 +670,7 @@ const endBtn = document.getElementById("endBtn");
   const SHOW_RADIUS_MAX = 54;
 
   let RECALL_RADIUS   = 22;    // adjustable size for recall
-  function paddingBetween(){ return Math.max(10, Math.round(0.25 * Math.max(SHOW_RADIUS_MAX, RECALL_RADIUS))); }    // non-overlap margin
+  const PADDING_BETWEEN = 12;    // non-overlap margin
 
   const BETWEEN_ROUNDS_MS = 900; // pause after success/fail
 
@@ -676,58 +694,6 @@ const endBtn = document.getElementById("endBtn");
     { name:"teal",    h:165,  s:80, l:48 },
     { name:"amber",   h: 42,  s:95, l:56 },
   ];
-
-
-  // ---------- Color helpers (make each circle color truly random) ----------
-  function hslToRgb(h, s, l){
-    // h:0-360, s/l:0-100
-    s /= 100; l /= 100;
-    const c = (1 - Math.abs(2*l - 1)) * s;
-    const hh = (h % 360) / 60;
-    const x = c * (1 - Math.abs((hh % 2) - 1));
-    let r=0,g=0,b=0;
-    if (0 <= hh && hh < 1){ r=c; g=x; b=0; }
-    else if (1 <= hh && hh < 2){ r=x; g=c; b=0; }
-    else if (2 <= hh && hh < 3){ r=0; g=c; b=x; }
-    else if (3 <= hh && hh < 4){ r=0; g=x; b=c; }
-    else if (4 <= hh && hh < 5){ r=x; g=0; b=c; }
-    else { r=c; g=0; b=x; }
-    const m = l - c/2;
-    r = Math.round((r+m)*255);
-    g = Math.round((g+m)*255);
-    b = Math.round((b+m)*255);
-    return [r,g,b];
-  }
-
-  function clamp255(v){ return Math.max(0, Math.min(255, Math.round(v))); }
-
-  function rgbCss(r,g,b){ return `rgb(${clamp255(r)}, ${clamp255(g)}, ${clamp255(b)})`; }
-
-  // Take a base HSL swatch and "randomize" it by multiplying RGB channels by random factors.
-  function randomizedColorFromSwatch(swatch){
-    const [br,bg,bb] = hslToRgb(swatch.h, swatch.s, swatch.l);
-
-    const fr = 0.75 + Math.random()*0.45;   // 0.75–1.20
-    const fg = 0.75 + Math.random()*0.45;
-    const fb = 0.75 + Math.random()*0.45;
-
-    let r = br * fr, g = bg * fg, b = bb * fb;
-
-    // Ensure not too dark
-    const minBright = 70;
-    const maxCh = Math.max(r,g,b);
-    if (maxCh < minBright){
-      const scale = minBright / (maxCh || 1);
-      r *= scale; g *= scale; b *= scale;
-    }
-
-    return rgbCss(r,g,b);
-  }
-
-  function pickRandomCircleColorCss(){
-    const sw = COLOR_PALETTE[Math.floor(Math.random()*COLOR_PALETTE.length)];
-    return randomizedColorFromSwatch(sw);
-  }
 
   // ---------- Bold, distinct tones (fixed mapping) ----------
   const NOTE_FREQS = [
@@ -845,6 +811,15 @@ const endBtn = document.getElementById("endBtn");
   const bgFileInput = document.getElementById("bgFileInput");
   let photoBgUrl = null;
 
+  function fileToDataURL(file){
+    return new Promise((resolve, reject)=>{
+      const reader = new FileReader();
+      reader.onerror = () => reject(reader.error || new Error("File read failed"));
+      reader.onload = () => resolve(String(reader.result || ""));
+      reader.readAsDataURL(file);
+    });
+  }
+
   function setPhotoBackground(dataUrl){
     photoBgUrl = dataUrl;
     const panel = document.getElementById("playPanel") || document.body;
@@ -855,6 +830,11 @@ const endBtn = document.getElementById("endBtn");
     document.documentElement.classList.add("photoBgActive");
   }
 
+  function applyPhotoBackgroundFromURL(url){
+    // remote URLs work as CSS backgrounds; note that some sites block hotlinking
+    setPhotoBackground(url);
+  }
+
   function clearPhotoBackground(){
     photoBgUrl = null;
     const panel = document.getElementById("playPanel") || document.body;
@@ -863,8 +843,7 @@ const endBtn = document.getElementById("endBtn");
     document.documentElement.classList.remove("photoBgActive");
   }
 
-  function openPhotoPicker(){
-    try{ bgFileInput && bgFileInput.click(); }catch(e){}
+  function openPhotoPicker(){ /* handled by photo swatch input overlay */ }
   }
 
   if(bgFileInput){
@@ -902,6 +881,8 @@ function initBackgroundPalette(opts){
     }
 
     function setTheme(key){
+      // If a photo background was active, switching themes disables it
+      clearPhotoBackground();
       applyBackgroundTheme(key);
       setSelected(key);
       try{ localStorage.setItem(storageKey, key); }catch(e){}
@@ -931,21 +912,79 @@ function initBackgroundPalette(opts){
     }catch(e){}
     setTheme(initial);
 
-    // Photo swatch at end (opens image picker; long-press clears photo)
-    const photo = document.createElement("button");
-    photo.type = "button";
-    photo.className = "bgSwatch upload";
-    photo.title = "Upload photo background";
-    photo.innerHTML = `<svg viewBox="0 0 24 24" aria-hidden="true"><path d="M5 20h14v-2H5v2zm7-16l-5 5h3v4h4v-4h3l-5-5z"/></svg>`;
-    photo.setAttribute("role","option");
-    photo.addEventListener("click", () => { openPhotoPicker(); });
+    // Photo swatch at end (tap to pick an image file)
+    // On iOS Safari, programmatic .click() on a hidden file input can be blocked.
+    // So we overlay a real <input type="file"> directly on top of the camera swatch.
+    const photoWrap = document.createElement("span");
+    photoWrap.className = "photo-wrap";
 
-    let pressTimer = null;
-    photo.addEventListener("pointerdown", () => { pressTimer = setTimeout(() => { clearPhotoBackground(); }, 650); });
-    photo.addEventListener("pointerup", () => { if(pressTimer) clearTimeout(pressTimer); pressTimer=null; });
-    photo.addEventListener("pointercancel", () => { if(pressTimer) clearTimeout(pressTimer); pressTimer=null; });
+    const photoBtn = document.createElement("button");
+    photoBtn.type = "button";
+    photoBtn.className = "bg-swatch photo";
+    photoBtn.title = "Use a photo as background";
+    photoBtn.setAttribute("aria-selected", "false");
+    photoBtn.dataset.key = "__photo__";
 
-    container.appendChild(photo);
+    const photoInput = document.createElement("input");
+    photoInput.type = "file";
+    photoInput.accept = "image/*";
+    photoInput.className = "photo-input";
+    photoInput.setAttribute("aria-label", "Choose photo background");
+
+    
+    // iOS Safari is more reliable when the file picker is triggered from a real button click.
+    photoInput.style.display = "none";
+    const openPicker = (ev) => { ev && ev.preventDefault(); ev && ev.stopPropagation(); photoInput.click(); };
+    photoBtn.addEventListener("click", openPicker);
+    photoBtn.addEventListener("touchstart", openPicker, {passive:false});
+photoInput.addEventListener("change", async (e) => {
+      const file = e.target.files && e.target.files[0];
+      if(!file) return;
+      try{
+        const dataUrl = await fileToDataURL(file);
+        setPhotoBackground(dataUrl);
+        // Mark selection
+        [...container.querySelectorAll(".bg-swatch")].forEach(el=>{
+          el.setAttribute("aria-selected", el.dataset.key === "__photo__" ? "true" : "false");
+        });
+      }catch(err){
+        console.warn("Photo load failed", err);
+      }finally{
+        // allow re-selecting same file later
+        photoInput.value = "";
+      }
+    });
+
+    photoWrap.appendChild(photoBtn);
+    photoWrap.appendChild(photoInput);
+    container.appendChild(photoWrap);
+
+    // Fallback: URL background (works even where file picker is blocked, e.g., some in-app browsers or home-screen mode)
+    const urlBtn = document.createElement("button");
+    urlBtn.type = "button";
+    urlBtn.className = "bg-swatch url";
+    urlBtn.title = "Use image URL as background";
+    urlBtn.textContent = "🔗";
+    urlBtn.setAttribute("aria-selected", "false");
+    urlBtn.addEventListener("click", () => {
+      const url = prompt("Paste an image URL (e.g., https://.../photo.jpg).");
+      if(!url) return;
+
+      // Validate lightly
+      const u = url.trim();
+      if(!/^https?:\/\//i.test(u)){
+        alert("That doesn't look like a full URL starting with http(s)://");
+        return;
+      }
+
+      applyPhotoBackgroundFromURL(u);
+      // visually indicate photo mode (use the photo button highlight)
+      activeKey = "__photo__";
+      markSelected("__photo__");
+      try{ localStorage.setItem(storageKey, "__photo__"); }catch(e){}
+    });
+    container.appendChild(urlBtn);
+
 
   return { setTheme };
   }
@@ -1059,8 +1098,6 @@ game.classList.add("goldGlow");
   async function runRound(token) {
     // Reset misses at the start of each round
     missesUsed = 0;
-    renderMisses();
-
     phase = "transition";
     clearBoard();
     syncLinesViewport();
@@ -1155,8 +1192,6 @@ game.classList.add("goldGlow");
       // Wrong click: allow up to MISS_LIMIT misses per round (do not end immediately)
       playFail();
       missesUsed = Math.min(MISS_LIMIT, missesUsed + 1);
-      renderMisses();
-
       circleObj.el.classList.add("wrong");
       setTimeout(() => circleObj.el?.classList.remove("wrong"), 260);
 
@@ -1206,6 +1241,19 @@ game.classList.add("goldGlow");
     try { window.close(); } catch(e) {}
   }
 
+  function showFinalScoreInline(){
+    // Minimal, non-blocking end-of-game message (no modal)
+    try{
+      const msg = document.getElementById("message");
+      if(msg){
+        msg.textContent = `Final score: N = ${bestN}. Tap Play to try again.`;
+      }
+    }catch(e){}
+    // Always hide overlay if it exists
+    const ov = document.getElementById("overlay");
+    if(ov) ov.style.display = "none";
+  }
+
   function endGame(){
     runToken++;
     showFinalScore();
@@ -1247,10 +1295,18 @@ game.classList.add("goldGlow");
 
 })();
 
-  renderMisses();
+  // DEBUG: show a tiny dot when JS has loaded
+  (function(){
+    const d=document.createElement('div');
+    d.style.cssText='position:fixed;right:6px;bottom:6px;width:8px;height:8px;border-radius:999px;background:rgba(0,255,120,.8);z-index:99;';
+    d.title='JS loaded';
+    document.body.appendChild(d);
+    setTimeout(()=>{d.remove();}, 2500);
+  })();
+
 </script>
 
 
-  <input id="bgFileInput" type="file" accept="image/*" style="display:none" />
+  <input id="bgFileInput" type="file" accept="image/*" style="position:fixed;left:-9999px;top:0;width:1px;height:1px;opacity:0;" />
 </body>
 </html>
